--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/assets/style/adminlte.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
